--- a/roster.html
+++ b/roster.html
@@ -182,13 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     DRAFT
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final 
+<b>Status</b> -  <b><mark>>> Draft  <<</mark></b> 
+             Pending Confirmation
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 25/04, 12:45)   [Pending Confirmation]
-                                     Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 01/05, 17:59)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -345,10 +344,8 @@ Mon   + Pla    |LC 0630-0730 (1.0)
 
 Wed   + Pla    |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
-      ^ Lucy  |LC 0930-1430 (5.0)
-              |CP 1430-1530 (1.0)
-
-Thu   % Vechda |CP 0730-1530 (8.0)
+      ^ Madi  |LC 0600-1000 (4.0)
+              |CP 1000-1430 (4.5)
 
 Fri   & Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
@@ -356,7 +353,26 @@ Fri   & Bea   |LC 0630-1430 (8.0)
 Away: 
 Fri - Vechda
 |==========================================================================|
-| For week starting    Mon   26/04/2021                                    |
+| For week starting    Mon   03/05/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechy      Millie  |
+| c    1030-1530|5.0   Rei-       Sean       Madi^      Bea        Vechy   |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Lucy       Madi       Bea     |
+|                                                                          |
+|==========================================================================|
+
+Away: 
+Thu - Bea
+|==========================================================================|
+| For week starting    Mon   10/05/2021      DRAFT                         |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -364,13 +380,33 @@ Fri - Vechda
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Sean       Madi       Bea        /       |
+| c    1030-1530|5.0   Rei-       Sean       Madi       /          Vechy   |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea&    |
+| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea     |
 |                                                                          |
 |==========================================================================|
+
+Away:
+Wed - Bea
+|==========================================================================|
+| For week starting    Mon   17/05/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Sean       Madi       Bea        Vechy   |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea     |
+|                                                                          |
+|==========================================================================|
+
 <!--Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
