--- a/roster.html
+++ b/roster.html
@@ -384,7 +384,7 @@ Thu - Bea
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea     |
+| e    0630-1430|8.0   Bea        Madi       Lucy       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -403,7 +403,7 @@ Wed - Bea
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea     |
+| e    0630-1430|8.0   Bea        Madi       Lucy       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
