--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft  <<</mark></b> 
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b> 
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 01/05, 17:59)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 02/05, 10:01)   [Pending Confirmation]
+             #1 (Sat 01/05, 17:59)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -345,7 +346,7 @@ Mon   + Pla    |LC 0630-0730 (1.0)
 Wed   + Pla    |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
       ^ Madi  |LC 0600-1000 (4.0)
-              |CP 1000-1430 (4.5)
+              |CP 1000-1400 (4.0)
 
 Fri   & Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
