--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 02/05, 10:01)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 02/05, 11:21)   Draft #2
+             #2 (Sun 02/05, 10:01)   [Pending Confirmation]
              #1 (Sat 01/05, 17:59)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -361,12 +362,12 @@ Fri - Vechda
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Sean       Madi^      Bea        Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechy   |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Lucy       Madi       Bea     |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -380,8 +381,8 @@ Thu - Bea
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Sean       Madi       /          Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Madi       /          Vechy   |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
@@ -399,8 +400,8 @@ Wed - Bea
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Sean       Madi       Bea        Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Madi       Bea        Vechy   |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
