--- a/roster.html
+++ b/roster.html
@@ -346,14 +346,12 @@ Mon   + Pla    |LC 0630-0730 (1.0)
 
 Wed   + Pla    |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
-      ^ Madi  |LC 0600-1000 (4.0)
-              |CP 1000-1400 (4.0)
 
 Fri   & Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
  
 Away: 
-Fri - Vechda
+Wed - Lucy
 |==========================================================================|
 | For week starting    Mon   03/05/2021      DRAFT                         |
 |==========================================================================|
