--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final
+             Pending Confirmation 
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 02/05, 11:21)   Draft #2
+<b>Changelog</b> -  #4 (Sun 02/05, 17:38)   [Final]<span id = "paraChangelog" style = "display:none">
+             #3 (Sun 02/05, 11:21)   Draft #2
              #2 (Sun 02/05, 10:01)   [Pending Confirmation]
              #1 (Sat 01/05, 17:59)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -353,7 +354,7 @@ Fri   & Bea   |LC 0630-1430 (8.0)
 Away: 
 Wed - Lucy
 |==========================================================================|
-| For week starting    Mon   03/05/2021      DRAFT                         |
+| For week starting    Mon   03/05/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -371,6 +372,7 @@ Wed - Lucy
 
 Away: 
 Thu - Bea
+Fri - Vechy
 |==========================================================================|
 | For week starting    Mon   10/05/2021      DRAFT                         |
 |==========================================================================|
@@ -379,8 +381,8 @@ Thu - Bea
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Madi       /          Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Madi       /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
