--- a/roster.html
+++ b/roster.html
@@ -350,6 +350,9 @@ Wed   + Pla    |LC 0630-0730 (1.0)
 
 Fri   & Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
+
+      # Vechy  |LC 0630-0730 (1.0)
+               |CP 0730-1530 (8.0)
  
 Away: 
 Wed - Lucy
@@ -361,8 +364,8 @@ Wed - Lucy
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Vechy#  |
+| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
