--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation 
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 02/05, 17:38)   [Final]<span id = "paraChangelog" style = "display:none">
-             #3 (Sun 02/05, 11:21)   Draft #2
-             #2 (Sun 02/05, 10:01)   [Pending Confirmation]
-             #1 (Sat 01/05, 17:59)   Draft #1</span>
+<b>Changelog</b> -  #1 (Fri 07/05, 19:34)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -340,40 +337,15 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       - Vechda   |CP 1030-1430 (4.0)
 
+
+Vechy 17
+Bea 31
+Sean 8
+
+
 -->
-Mon   + Pla    |LC 0630-0730 (1.0)
-               |CP 0730-1530 (8.0)
-      - Rei   |CP 1030-1430 (4.0)
-
-Wed   + Pla    |LC 0630-0730 (1.0)
-               |CP 0730-1530 (8.0)
-
-Fri   & Bea   |LC 0630-1430 (8.0)
-              |CP 1430-1530 (1.0)
-
-      # Vechy  |LC 0630-0730 (1.0)
-               |CP 0730-1530 (8.0)
- 
 Away: 
-Wed - Lucy
-|==========================================================================|
-| For week starting    Mon   03/05/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Vechy#  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
-|                                                                          |
-|==========================================================================|
-
-Away: 
+Tue - Sean
 Thu - Bea
 Fri - Vechy
 |==========================================================================|
@@ -384,8 +356,8 @@ Fri - Vechy
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Madi       /          /       |
+| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechy      Millie  |
+| c    1030-1530|5.0   Rei-       /          Madi       /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
