--- a/roster.html
+++ b/roster.html
@@ -352,9 +352,9 @@ Mon   + Pla   |LC 0630-1430 (8.0)
 Tue   * Madi   |LC 0600-1430 (8.5)
                |CP 1430-1530 (1.0) 
 
-Wed   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      - Pla    |CP 1030-1430 (4.0)
+Wed   $ Pla  |LC 0700-0730 (0.5)
+             |CP 0730-1530 (8.0)
+      - Bea    |CP 1030-1430 (4.0)
       
 Thu   + Vechy  |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
