--- a/roster.html
+++ b/roster.html
@@ -351,10 +351,6 @@ Mon   + Pla   |LC 0630-1430 (8.0)
 
 Tue   * Madi   |LC 0600-1430 (8.5)
                |CP 1430-1530 (1.0) 
-
-Wed   + Pla  |LC 0630-0730 (1.0)
-             |CP 0730-1530 (8.0)
-      - Bea    |CP 1030-1430 (4.0)
       
 Thu   + Vechy  |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
@@ -373,8 +369,8 @@ Vechy - away Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechy+     Millie  |
-| c    1030-1530|5.0   Rei-       /          Bea-       Rei-       /       |
+| b    0630-1430|8.0~  Pla+       Bea        Pla        Vechy+     Millie  |
+| c    1030-1530|5.0   Rei-       /          Bea        Rei-       /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
