--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,14 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation 
-             Final
+<b>Status</b> -     Draft
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 09/05, 11:09)   Draft #2
+<b>Changelog</b> -  #3 (Sun 09/05, 16:52)   [Final]<span id = "paraChangelog" style = "display:none">
+                                     Pla starting late Monday
+             #2 (Sun 09/05, 11:09)   Draft #2
              #1 (Fri 07/05, 19:34)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -345,7 +347,7 @@ Sean 8
 
 
 -->
-Mon   + Pla   |LC 0630-1430 (8.0)
+Mon   + Pla   |LC 1030-1430 (4.0)
               |CP 1430-1530 (1.0)
       - Rei   |CP 1030-1430 (4.0)
 
