--- a/roster.html
+++ b/roster.html
@@ -372,7 +372,7 @@ Vechy - away Fri
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0630-1430|8.0~  Pla+       Bea        Pla        Vechy+     Millie  |
-| c    1030-1530|5.0   Rei-       /          Bea        Rei-       /       |
+| c    1030-1530|5.0   Rei-       /          Bea        /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
