--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 09/05, 16:52)   [Final]<span id = "paraChangelog" style = "display:none">
-                                     Pla starting late Monday
-             #2 (Sun 09/05, 11:09)   Draft #2
-             #1 (Fri 07/05, 19:34)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 16/05, 10:54)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -351,37 +348,15 @@ Mon   + Pla   |LC 1030-1430 (4.0)
               |CP 1430-1530 (1.0)
       - Rei   |CP 1030-1430 (4.0)
 
-Tue   * Madi   |LC 0600-1430 (8.5)
-               |CP 1430-1530 (1.0) 
+Tue   + Sean  |LC 0630-0730 (1.0)
+              |CP 0730-1530 (8.0) 
       
-Thu   + Vechy  |LC 0630-0730 (1.0)
-               |CP 0730-1530 (8.0)
-      - Rei   |CP 1030-1430 (4.0)
+Wed   + Pla  |LC 0630-0730 (1.0)
+             |CP 0730-1530 (8.0) 
 
 Notes: 
-Lucy - taking a break ! Baby coming (:
-Sean - away Tuesday
-Bea - gotta leave 1430 on Tuesday. Bea away Thursday
-Vechy - away Fri
-|==========================================================================|
-| For week starting    Mon   10/05/2021      DRAFT                         |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Bea        Pla        Vechy+     Millie  |
-| c    1030-1530|5.0   Rei-       /          Bea        /          /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi*      Madi       Madi       Bea     |
-|                                                                          |
-|==========================================================================|
-
-Away:
-Wed - Bea
+Tue - Madi away
+Wed - Bea away
 |==========================================================================|
 | For week starting    Mon   17/05/2021      DRAFT                         |
 |==========================================================================|
@@ -390,12 +365,12 @@ Wed - Bea
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechy   |
+| b    0630-1430|8.0~  Pla+       Sean+      Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       /          /          Bea        Vechy   |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
+| e    0630-1430|8.0   Bea        Bea        Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
