--- a/roster.html
+++ b/roster.html
@@ -374,6 +374,23 @@ Wed - Bea away
 |                                                                          |
 |==========================================================================|
 
+|==========================================================================|
+| For week starting    Mon   24/05/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0630-1430|8.0~  Pla+       Sean+      Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechy   |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
+|                                                                          |
+|==========================================================================|
+
 <!--Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
