--- a/roster.html
+++ b/roster.html
@@ -377,7 +377,7 @@ Wed - Bea away
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Bea        Madi       Madi       Bea     |
+| e    0630-1430|8.0   Bea        Bea        Madi       Madi       Bea*    |
 |                                                                          |
 |==========================================================================|
 
