--- a/roster.html
+++ b/roster.html
@@ -381,6 +381,8 @@ Wed - Bea away
 |                                                                          |
 |==========================================================================|
 
+Notes:
+Fri - Vechy away
 |==========================================================================|
 | For week starting    Mon   24/05/2021      DRAFT                         |
 |==========================================================================|
@@ -390,7 +392,7 @@ Wed - Bea away
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0630-1430|8.0~  Pla+       Sean+      Pla+       Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechy   |
+| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
