--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 16/05, 15:22)   [Pending Confirmatiob]
+<b>Changelog</b> -  #3 (Sun 16/05, 16:32)   Fixed times
+             #2 (Sun 16/05, 15:22)   [Pending Confirmatiob]
                                      Draft 2
              #1 (Sun 16/05, 10:54)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -346,7 +347,7 @@ Sean 8
 
 
 -->
-Mon   + Pla   |LC 1030-1430 (4.0)
+Mon   + Pla   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
       - Rei   |CP 1030-1430 (4.0)
 
