--- a/roster.html
+++ b/roster.html
@@ -183,12 +183,13 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 16/05, 16:32)   Fixed times
-             #2 (Sun 16/05, 15:22)   [Pending Confirmatiob]
+<b>Changelog</b> -  #4 (Sun 16/05, 16:32)   [Final]
+             #3 (Sun 16/05, 16:32)   Fixed times for Mon
+             #2 (Sun 16/05, 15:22)   [Pending Confirmation]
                                      Draft 2
              #1 (Sun 16/05, 10:54)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
