--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 16/05, 16:32)   [Final]
+<b>Changelog</b> -  #4 (Sun 16/05, 16:32)   [Final]<span id = "paraChangelog" style = "display:none"> 
              #3 (Sun 16/05, 16:32)   Fixed times for Mon
              #2 (Sun 16/05, 15:22)   [Pending Confirmation]
                                      Draft 2
