--- a/roster.html
+++ b/roster.html
@@ -182,17 +182,6 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
-             <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
-<!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 16/05, 16:32)   [Final]<span id = "paraChangelog" style = "display:none"> 
-             #3 (Sun 16/05, 16:32)   Fixed times for Mon
-             #2 (Sun 16/05, 15:22)   [Pending Confirmation]
-                                     Draft 2
-             #1 (Sun 16/05, 10:54)   Draft #1</span>
-<!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
 
@@ -352,8 +341,8 @@ Mon   + Pla   |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
       - Rei   |CP 1030-1430 (4.0)
 
-Tue   + Sean  |LC 0630-0730 (1.0)
-              |CP 0730-1530 (8.0) 
+Tue   + Sean   |LC 0630-0730 (1.0)
+               |CP 0730-1530 (8.0) 
       
 Wed   + Pla  |LC 0630-0730 (1.0)
              |CP 0730-1530 (8.0) 
@@ -367,7 +356,7 @@ Notes:
 Tue - Madi away
 Wed - Bea away
 |==========================================================================|
-| For week starting    Mon   17/05/2021      DRAFT                         |
+| For week starting    Mon   17/05/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
