--- a/roster.html
+++ b/roster.html
@@ -344,6 +344,7 @@ Sean 8
 
 
 -->
+
 Mon   + Pla   |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
       - Rei   |CP 1030-1430 (4.0)
@@ -361,14 +362,14 @@ Fri   * Bea   |LC 0630-1430 (8.0)
 Notes:
 Fri - Vechy away
 |==========================================================================|
-| For week starting    Mon   24/05/2021      DRAFT                         |
+| For week starting    Mon   24/05/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechda     Millie  |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Millie  |
 | c    1030-1530|5.0   Rei-       Bea        Bea-       Bea        Bea*    |
 |                                                                          |
 |       LC                                                                 |
@@ -377,6 +378,22 @@ Fri - Vechy away
 |                                                                          |
 |==========================================================================|
 
+|==========================================================================|
+| For week starting    Mon   31/05/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Vechy   |
+| c    1030-1530|5.0   Rei-       Bea        Bea-       Bea        Bea*    |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea*    |
+|                                                                          |
+|==========================================================================|
 <!--Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
