--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,13 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 23/05, 13:33)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 23/05, 14:39)   [Final]
+                                     Bea away Thu
+             #2 (Sun 23/05, 13:33)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 22/05, 07:45)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -358,6 +360,7 @@ Fri   * Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0) 
  
 Notes:
+Thu - Bea Away
 Fri - Vechy away
 |==========================================================================|
 | For week starting    Mon   24/05/2021                                    |
@@ -368,7 +371,7 @@ Fri - Vechy away
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0630-1430|8.0~  Pla+       Sean       Pla        Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Bea*    |
+| c    1030-1530|5.0   Rei-       Bea        Bea        /          Bea*    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
