--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 23/05, 14:39)   [Final]
+<b>Changelog</b> -  #4 (Tue 25/05, 19:53)   [Wed] Pla sick, Bea to cover
+             #3 (Sun 23/05, 14:39)   [Final]
                                      Bea away Thu
              #2 (Sun 23/05, 13:33)   [Pending Confirmation]
                                      Draft #2
@@ -356,6 +357,9 @@ Mon   + Pla   |LC 0630-0730 (1.0)
 Tue   + Sean   |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0) 
 
+Wed   ! Bea   |LC 0630-0730 (1.0)
+              |CP 0730-1530 (8.0)
+
 Fri   * Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0) 
  
@@ -370,8 +374,8 @@ Fri - Vechy away
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla        Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        /          Bea*    |
+| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      Millie  |
+| c    1030-1530|5.0   Rei-       Bea        /          /          Bea*    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
