--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Tue 25/05, 19:53)   [Wed] Pla sick, Bea to cover
+<b>Changelog</b> -  #5 (Thu 27/05, 19:48)   COVID !! CP Closed for the timebeing
+             #4 (Tue 25/05, 19:53)   [Wed] Pla sick, Bea to cover
              #3 (Sun 23/05, 14:39)   [Final]
                                      Bea away Thu
              #2 (Sun 23/05, 13:33)   [Pending Confirmation]
@@ -373,13 +374,13 @@ Fri - Vechy away
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      Millie  |
-| c    1030-1530|5.0   Rei-       Bea        /          /          Bea*    |
+| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
+| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      /       |
+| c    1030-1530|5.0   Rei-       Bea        /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea*    |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Nere    |
 |                                                                          |
 |==========================================================================|
 
