--- a/roster.html
+++ b/roster.html
@@ -360,10 +360,10 @@ Tue   + Sean   |LC 0630-0730 (1.0)
 
 Wed   ! Bea   |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
-
+<del>
 Fri   * Bea   |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0) 
- 
+ </del>
 Notes:
 Thu - Bea Away
 Fri - Vechy away
