--- a/roster.html
+++ b/roster.html
@@ -184,16 +184,13 @@ B3 ROSTER
 
 <b>Status</b> -     Draft
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+             Final
+          <b><mark>>> COVID timetable <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Thu 27/05, 19:48)   COVID !! CP Closed for the timebeing
-             #4 (Tue 25/05, 19:53)   [Wed] Pla sick, Bea to cover
-             #3 (Sun 23/05, 14:39)   [Final]
-                                     Bea away Thu
-             #2 (Sun 23/05, 13:33)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Sat 22/05, 07:45)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 30/05, 09:59)   COVID timetable start
+                                     CP Closed until further notice, maybe following week
+                                     Keep an eye on the news and we will contact you asap!</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -368,36 +365,19 @@ Notes:
 Thu - Bea Away
 Fri - Vechy away
 |==========================================================================|
-| For week starting    Mon   24/05/2021                                    |
+| For week starting    Mon   31/05/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
-| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      /       |
-| c    1030-1530|5.0   Rei-       Bea        /          /          /       |
+| a    0730-1530|      /          /          /          /          /       |
+| b    0630-1430|8.0~  /          /          /          /          /       |
+| c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Nere    |
-|                                                                          |
-|==========================================================================|
-
-|==========================================================================|
-| For week starting    Mon   31/05/2021      DRAFT                         |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Vechy      Vechy   |
-| c    1030-1530|5.0   Rei-       Bea        Bea-       Bea        Bea*    |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea*    |
+| e    0630-1500|      Nere       Nere       Nere       Nere       Nere    |
 |                                                                          |
 |==========================================================================|
 <!--Mon - Fri  
@@ -416,6 +396,24 @@ Tue   ^ Sean   |LC 0630-1430 (8.0)
 Wed   * Millie  |LC 0700-0730 (0.5)
                 |CP 0700-1530 (8.5)
       = Pla    |CP 1100-1430 (3.5)
+
+|==========================================================================|
+| For week starting    Mon   24/05/2021                                    |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
+| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      /       |
+| c    1030-1530|5.0   Rei-       Bea        /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Nere    |
+|                                                                          |
+|==========================================================================|
+
 
 Lucy: Can't work this week
 |==========================================================================|
