--- a/roster.html
+++ b/roster.html
@@ -188,9 +188,10 @@ B3 ROSTER
           <b><mark>>> COVID timetable <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 30/05, 09:59)   COVID timetable start
-                                     CP Closed until further notice, maybe following week
-                                     Keep an eye on the news and we will contact you asap!</span>
+<b>Changelog</b> -  #1 (Sun 30/05, 09:59)   COVID timetable start !!
+                                     CP Closed until further notice, maybe 
+                                     the following week. Keep an eye on the 
+                                     news and we will contact you asap!</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -323,30 +324,7 @@ Lucy - None
       ~ b   |LC 0630-0730 (1.0)
             |CP 0730-1430 (7.0) </em>
 <!--
-Mon   ^ Bea    |LC 0700-0730 (0.5)
-               |CP 0730-1500 (7.5)
-      - Rei   |CP 1030-1430 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
 
-Tue   $ Bea    |LC 0700-0730 (0.5)
-               |CP 0730-1530 (8.0)
-
-Wed   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      - Pla    |CP 1030-1430 (4.0)
-      
-Thu   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      - Vechda   |CP 1030-1430 (4.0)
-
-
-Vechy 17
-Bea 31
-Sean 8
-
-
--->
 
 Mon   + Pla   |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
@@ -364,6 +342,13 @@ Fri   * Bea   |LC 0630-1430 (8.0)
 Notes:
 Thu - Bea Away
 Fri - Vechy away
+
+Vechy 17
+Bea 31
+Sean 8
+
+
+-->
 |==========================================================================|
 | For week starting    Mon   31/05/2021                                    |
 |==========================================================================|
